--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,5 +1,5 @@
 .home-background {
-  background-image: url('../    ')
+  background-image: url('/public/background.jpg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
