--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,10 @@
-body, html, #root {
+* {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+}
+
+body, html, #root {
   width: 100%;
   height: 100%;
 }
