--- a/src/pages/Services.css
+++ b/src/pages/Services.css
@@ -1,6 +1,6 @@
 /* Wrapper */
 .services-wrapper {
-  background-color: #e0c4e6;
+  background-color: #f6e2fa;
   min-height: 100vh;
   width: 100vw;
   padding: 3rem 5vw;
