--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -3,7 +3,7 @@
 
    /* General style of Navbar*/ 
     .MyNavbar {
-      background-color: #b76eb7;
+      background-color: #df97df;
       padding: 10px 20px;
     }
 
