--- a/src/pages/Portfolio.css
+++ b/src/pages/Portfolio.css
@@ -1,10 +1,59 @@
-@import url('https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap');
+
 
 .Portfolio-Heading{
-    font-family: 'Great Vibes', cursive;
     font-weight: 500;
+    margin-bottom: 80px;
   /*font-family: "EB Garamond", serif;
   font-optical-sizing: auto;
   font-weight: 300;
   font-style: italic;*/
 }
+
+.Photos{
+  margin-top: 80px;
+}
+/* Portfolio.css */
+
+.portfolio-page {
+    padding: 40px 20px;
+}
+
+.portfolio-title {
+    text-align: center;
+    font-size: 32px;
+    color: rgb(57, 17, 78);
+    margin-bottom: 40px;
+}
+
+.portfolio-section {
+    margin-bottom: 40px;
+}
+
+.portfolio-section h3 {
+    font-size: 24px;
+    color: black;
+    margin-bottom: 20px;
+    text-align: center;
+    text-decoration: underline;
+}
+
+.portfolio-gallery {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+}
+
+.portfolio-gallery img {
+    width: 300px;
+    height: 300px;
+    object-fit: cover;
+    border-radius: 8px;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease;
+}
+
+.portfolio-gallery img:hover {
+    transform: scale(1.05);
+}
+
