Remove old homepage file

--- a/src/pages/Appointment.css
+++ b/src/pages/Appointment.css
@@ -8,7 +8,7 @@
 .appointment-form {
   width: 100%;
   max-width: 800px;
-  background-color: #cba3cc;
+  background-color: #e5c3e6;
   padding: 2rem;
   border-radius: 8px;
   color: black;
